# Helix

./: .env.example  .gitignore  README.md  docker-compose-local.yml  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  test-json.js  test.js
.github/workflows/: ci.yml
.kombai/canvas/: Lumen.canvas  Studio-Kor.canvas
apps/api/: .env.example
apps/space/app/: entry.client.tsx  error.tsx  not-found.tsx  page.tsx  providers.tsx  root.tsx  routes.ts
apps/space/helpers/: authentication.helper.tsx  common.helper.ts  date-time.helper.ts  editor.helper.ts  emoji.helper.tsx  file.helper.ts  issue.helper.ts  query-param-generator.ts  state.helper.ts  string.helper.ts
apps/space/hooks/: use-clipboard-write-permission.tsx  use-editor-flagging.ts  use-intersection-observer.tsx  use-is-in-iframe.tsx  use-mention.tsx  use-parse-editor-content.ts
apps/space/lib/: instance-provider.tsx  store-provider.tsx  toast-provider.tsx
apps/space/store/: cycle.store.ts  instance.store.ts  issue-detail.store.ts  issue-filters.store.ts  issue.store.ts  label.store.ts  members.store.ts  module.store.ts  profile.store.ts  root.store.ts  state.store.ts  user.store.ts
apps/space/types/: auth.ts
apps/web/: package.json
apps/web/app/: entry.client.tsx  (+5 more)
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 41e0c046dd42_add_meetings_and_stickynotes.py  44f3687e095f_add_auth_models.py  6f81283a566f_add_auditmixin_to_stickynote.py  eddecb513b86_add_cover_image_to_projects.py
backend/src/: __init__.py  main.py
backend/src/core/: config.py  dependencies.py  exceptions.py  middleware.py  rate_limit.py  response.py  security.py
backend/src/infrastructure/cache/: redis.py
backend/src/infrastructure/database/: base.py  mixins.py  session.py
backend/src/infrastructure/email/: client.py
backend/src/infrastructure/realtime/: manager.py  redis_pubsub.py
backend/src/infrastructure/storage/: minio.py
backend/src/modules/ai/: router.py
backend/src/modules/analytics/: router.py
backend/src/modules/auth/: models.py  oauth_service.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/cycles/: models.py  router.py  schemas.py  service.py
backend/src/modules/issues/: models.py  router.py  schemas.py  service.py
backend/src/modules/meetings/: models.py  router.py  schemas.py  service.py
backend/src/modules/notifications/: models.py  router.py
backend/src/modules/organizations/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/modules/projects/: models.py  notes_router.py  router.py  schemas.py  service.py
backend/src/modules/realtime/: router.py
backend/src/modules/users/: models.py  router.py  schemas.py  service.py
backend/src/modules/workspaces/: __init__.py  models.py  router.py  schemas.py  service.py
deploy/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  nginx.dev.conf
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
halo-landing/: index.html  package-lock.json  package.json
halo-landing/src/: App.tsx  index.css
scripts/: init-db.sql
(+1953 files in other folders)
