[tool.poetry]
name = "helix-backend"
version = "0.1.0"
description = "Helix - AI-Native Project Management Platform Backend"
authors = ["Helix Team <team@helix.app>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
gunicorn = "^23.0.0"

# Database
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"    # For Alembic sync operations

# Validation
pydantic = { version = "^2.10.0", extras = ["email"] }
pydantic-settings = "^2.6.0"

# Auth
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.20"
httpx = "^0.28.0"              # OAuth HTTP client

# Cache
redis = { version = "^5.2.0", extras = ["hiredis"] }

# Queue
aio-pika = "^9.5.0"

# Storage (MinIO / S3)
aiobotocore = "^2.15.0"
boto3 = "^1.35.0"

# Search / AI
openai = "^1.58.0"
anthropic = "^0.40.0"
langchain = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-community = "^0.3.0"
langgraph = "^0.2.0"
qdrant-client = "^1.12.0"

# Email
aiosmtplib = "^3.0.2"
jinja2 = "^3.1.4"             # Email templates

# Utilities
python-slugify = "^8.0.4"
pillow = "^11.0.0"             # Image processing
python-magic = "^0.4.27"       # File type detection
orjson = "^3.10.0"             # Fast JSON
structlog = "^24.4.0"          # Structured logging
sentry-sdk = { version = "^2.19.0", extras = ["fastapi"] }

# Observability
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.0"
factory-boy = "^3.3.1"
faker = "^33.0.0"
anyio = { version = "^4.7.0", extras = ["trio"] }
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 150
target-version = "py312"
[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ASYNC", "S", "B", "C4", "DTZ", "RUF"]
ignore = ["S101", "S104", "S105", "F821", "E501", "F841", "N811", "S110", "B008", "E741", "E402", "B904", "RUF005", "N802", "N818", "N801"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require running services)",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
